--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="public/css/normalize.css">
     <link rel="stylesheet" href="public/css/main.css">
     <!--BootStrap -->
+    <link rel="stylesheet" href="public/css/bootstrap.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -28,10 +29,13 @@
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
-                <li role="presentation"><a href="/">Home</a></li>
-                <li role="presentation"><a href="/users/login">Login</a></li>
-                <li role="presentation"><a href="/users/logout">Logout</a></li>
-                <li role="presentation"><a href="/users/register">Sign up</a></li>
+                {{#if user}}
+                    <li role="presentation"><a href="/">Dashboard</a></li>
+                    <li role="presentation"><a href="/users/logout">Logout</a></li>
+                {{else}}
+                    <li role="presentation"><a href="/users/login">Login</a></li>
+                    <li role="presentation"><a href="/users/register">Register</a></li>
+                {{/if}}"><a href="/users/register">Sign up</a></li>
             </ul>
         </nav>
         <h3 class="text-muted">Login</h3>
@@ -45,6 +49,17 @@
 
     <div class="row ">
         <div class="col-lg-12">
+            {{#if success_msg}}
+                <div class="alert alert-success">{{success_msg}}</div>
+            {{/if}}
+
+            {{#if error_msg}}
+                <div class="alert alert-danger">{{error_msg}}</div>
+            {{/if}}
+
+            {{#if error}}
+                <div class="alert alert-danger">{{error}}</div>
+            {{/if}}
          {{{body}}}
         </div>
 
@@ -52,18 +67,7 @@
     </div>
 </body>
 
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="public/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-<script src="public/js/plugins.js"></script>
-<script src="public/js/main.js"></script>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='https://www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-</script>
+<footer class="footer">
+    <p>&copy; Color Nerds</p>
+</footer>
 </html>
