--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,13 +1,19 @@
 <h2 class="page-header">Register</h2>
-<form action="/users/register" class="post">
+{{#if errors}}
+    {{#each errors}}
+        <div class="alert alert-danger">{{msg}}</div>
+    {{/each}}
+{{/if}}
+
+<form action="/users/register" method="post">
     <div class="form-group">
         <label>Name</label>
-        <input type="text" class="form-control" placeholder="Name" name="name">
+        <input type="text" class="form-control" placeholder="Name" name="rName">
     </div>
 
     <div class="form-group">
         <label>Username</label>
-        <input type="text" class="form-control" placeholder="Username">
+        <input type="text" class="form-control" placeholder="Username" name="username">
     </div>
 
     <div class="form-group">
