--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -35,7 +35,7 @@
                 {{else}}
                     <li role="presentation"><a href="/users/login">Login</a></li>
                     <li role="presentation"><a href="/users/register">Register</a></li>
-                {{/if}}"><a href="/users/register">Sign up</a></li>
+                {{/if}}<a href="/users/register">Sign up</a></li>
             </ul>
         </nav>
         <h3 class="text-muted">Login</h3>
