--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,12 @@
 <h2 class="page-header">Account Login</h2>
-<form action="/users/login" class="post">
+<form action="/users/login" method="post">
     <div class="form-group">
         <label>Username</label>
-        <input type="text" class="form-control" placeholder="Username">
+        <input type="text" class="form-control" name="username" placeholder="Username">
     </div>
     <div class="form-group">
         <label>Password</label>
-        <input type="password" class="form-control" placeholder="Password">
+        <input type="password" class="form-control" name="password" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
