--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,50 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html >
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <link rel="stylesheet" href="public/css/normalize.css">
-    <link rel="stylesheet" href="public/css/main.css">
-    <!--BootStrap -->
-    <link rel="stylesheet" href="public/css/bootstrap.css">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="public/js/vendor/modernizr-2.8.3.min.js"></script>
-
-    <!-- google maps api -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYaUhJlde8EY44z5vETFJM0MUokh0bDNA&callback=initMap"
-            async defer></script>
-
+    {{>head}}
 </head>
 <body>
-<div class="container">
-    <div class="header clearfix">
-        <nav>
-            <ul class="nav nav-pills pull-right">
-                {{#if user}}
-                    <li role="presentation"><a href="/">Dashboard</a></li>
-                    <li role="presentation"><a href="/users/logout">Logout</a></li>
-                {{else}}
-                    <li role="presentation"><a href="/users/login">Login</a></li>
-                    <li role="presentation"><a href="/users/register">Register</a></li>
-                {{/if}}
-            </ul>
-        </nav>
-        <h3 class="text-muted">Login</h3>
-    </div>
+{{>navbar}}
 
     <div class="jumbotron">
         <h1>Jumbotron heading</h1>
@@ -66,6 +26,7 @@
                 <div class="alert alert-danger">{{error}}</div>
             {{/if}}
          {{{body}}}
+        <div id="map"></div>
         </div>
 
     </div>
@@ -76,4 +37,9 @@
 <footer class="footer">
     <p>&copy; Color Nerds</p>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script>window.jQuery || document.write('<script src="/public/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+
 </html>
