--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,11 +2,12 @@
 body {
     padding-top: 20px;
     padding-bottom: 20px;
+
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
-.marketing,
+
 .footer {
     padding-right: 15px;
     padding-left: 15px;
@@ -26,20 +27,13 @@ body {
 
 /* Custom page footer */
 .footer {
+    position: relative;
     padding-top: 19px;
     color: #777;
     border-top: 1px solid #e5e5e5;
 }
 
 /* Customize container */
-@media (min-width: 768px) {
-    .container {
-        max-width: 730px;
-    }
-}
-.container-narrow > hr {
-    margin: 30px 0;
-}
 
 /* Main marketing message and sign up button */
 .jumbotron {
@@ -51,23 +45,9 @@ body {
     font-size: 21px;
 }
 
-/* Supporting marketing content */
-.marketing {
-    margin: 40px 0;
-}
-.marketing p + h4 {
-    margin-top: 28px;
-}
 
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-    /* Remove the padding we set earlier */
-    .header,
-    .marketing,
-    .footer {
-        padding-right: 0;
-        padding-left: 0;
-    }
+
     /* Space out the masthead */
     .header {
         margin-bottom: 30px;
@@ -76,7 +56,12 @@ body {
     .jumbotron {
         border-bottom: 0;
     }
-}
 #map{
- height: 50%;
+
+    min-height: 100%;
+    width: 100%;
+   display: flex;
+    position: absolute;
+
+
 }
