--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,45 +1,31 @@
 <!doctype html>
-<html >
+<html>
 <head>
+
     {{>head}}
 </head>
 <body>
 {{>navbar}}
+{{>jumbotron}}
+{{>error}}
 
-    <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-lg btn-success" href="/users/register" role="button">Sign up today</a></p>
-    </div>
 
-    <div class="row ">
-        <div class="col-lg-12">
-            {{#if success_msg}}
-                <div class="alert alert-success">{{success_msg}}</div>
-            {{/if}}
 
-            {{#if error_msg}}
-                <div class="alert alert-danger">{{error_msg}}</div>
-            {{/if}}
+    <div class="container-fluid">
+        <div class="row">
 
-            {{#if error}}
-                <div class="alert alert-danger">{{error}}</div>
-            {{/if}}
-         {{{body}}}
-        <div id="map"></div>
+                {{{body}}}
+            </div>
         </div>
 
+
     </div>
-    </div>
+</div>
+
+</div>
+
 
 </body>
 
-<footer class="footer">
-    <p>&copy; Color Nerds</p>
-</footer>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="/public/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 
 </html>
