--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,5 @@
 {{>jumbotron}}
+<body background="/img/png/background.png">
 <h2 class="page-header">Dashboard</h2>
 <p>Welcome to your dashboard</p>
+</body>
