--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,17 +4,19 @@
 
     {{>head}}
 </head>
-<body>
+<body background="/img/png/fullbg.png" >
 {{>navbar}}
-{{>jumbotron}}
+
 {{>error}}
 
 
 
     <div class="container-fluid">
         <div class="row">
+        <div class="expressContent">
+            {{{body}}}
+        </div>
 
-                {{{body}}}
             </div>
         </div>
 
