--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,8 @@
 body {
     padding-top: 20px;
     padding-bottom: 20px;
+    background-repeat: no-repeat;
+    background-size: 100% 120%;
 
 }
 
@@ -49,19 +51,29 @@ body {
 /* Responsive: Portrait tablets and up */
 
     /* Space out the masthead */
-    .header {
-        margin-bottom: 30px;
-    }
+
     /* Remove the bottom border on the jumbotron for visual effect */
     .jumbotron {
         border-bottom: 0;
     }
 #map{
 
-    min-height: 100%;
-    width: 100%;
-   display: flex;
+    min-height: 75%;
+    width:  75%;
+    display: flex;
     position: absolute;
+    align-content:center;
+    overflow: auto;
+    padding-left: 200px;
+    padding-bottom: 50px;
+
+}
+
+#ddtabs{
+    color: white;
+}
+
+.expressContent{
 
 
 }
