--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,6 +1,28 @@
-<div class="container">
-    <div class="header clearfix">
-        <nav>
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+        <div class="header clearfix">
+
+            <ul class="nav nav-pills pull-left">
+                ...
+                <li role="presentation" class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        Dropdown <span class="caret"></span>
+                    </a>
+
+                    <ul class= "dropdown-menu" >
+                        <li id="ddtabs"><a href="/maps/home">Map</a></li>
+                        <li>Favorite Places</li>
+                        <li>Events</li>
+                        <li>Forum</li>
+                        <li>Settings</li>
+                        <li>Logout</li>
+                    </ul>
+
+                </li>
+                ...
+            </ul>
+
             <ul class="nav nav-pills pull-right">
                 {{#if user}}
                     <li role="presentation"><a href="/">Dashboard</a></li>
@@ -10,7 +32,9 @@
                     <li role="presentation"><a href="/users/register">Register</a></li>
                 {{/if}}
             </ul>
-        </nav>
-        <h3 class="text-muted">Login</h3>
-    </div>
-</div>
+        </div>
+        </div>
+    </nav>
+
+
+
