--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,33 +1,23 @@
 <!doctype html>
 <html>
 <head>
-
     {{>head}}
 </head>
-<body background="/img/png/fullbg.png" >
+<body background="/img/svg/background.svg">
 {{>navbar}}
 
 {{>error}}
 
-
-
-    <div class="container-fluid">
-        <div class="row">
+{{#if user}}
+{{else}}
+{{>jumbotron}}
+{{/if}}
+<div class="container-fluid">
+    <div class="row">
         <div class="expressContent">
             {{{body}}}
         </div>
-
-            </div>
-        </div>
-
-
     </div>
 </div>
-
-</div>
-
-
 </body>
-
-
 </html>
