--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,14 +58,11 @@ body {
     }
 #map{
 
-    min-height: 75%;
+    height:100%;
     width:  75%;
-    display: flex;
     position: absolute;
-    align-content:center;
-    overflow: auto;
-    padding-left: 200px;
-    padding-bottom: 50px;
+    right: 0px;
+    left: 362px;
 
 }
 
@@ -73,61 +70,88 @@ body {
     color: white;
 }
 
+.index-grid{
+
+}
+
 .left{
     height: 100%;
-    margin-left: 10%;
-    padding-right: .5%;
-    margin-right: 10%;
+    max-width: 30vw;
+    float: left;
+
 
 }
 
 .center{
     height: 100%;
-    margin-left: 60%;
+
+
 
 }
 
 .right{
     height: 100%;
-    margin-left: 75%;
+
+    float: right;
+
 }
 
 
 .image1{
     max-height: 100%;
-    max-width: 100%;
+    max-width: 25vw;
+    margin-right: 1%;
+    padding: 5px;
+
 
 
 }
 
 .image2{
     max-height: 100%;
-    max-width: 100%;
-
+    max-width: 25vw;
+    padding: 5px;
 
 }
 
 .image3{
     max-height: 100%;
-    max-width: 100%;
+    max-width: 25vw;
+    padding: 5px;
+
 }
 
 .image4{
     max-height: 100%;
-    max-width: 100%;
+    max-width: 25vw;
+    padding: 5px;
+    float: left;
 
 }
 
 .image5{
     max-height: 100%;
-    max-width: 100%;
+    max-width: 25vw;
+    padding: 5px;
+    float: left;
 
 }
 .image6{
     max-height: 100%;
-    max-width: 100%;
+    max-width: 25vw;
+    padding: 5px;
+    float: right;
 
 }
 /* Index irregular grid */
 
-
+.options-box{
+    background: darkorange;
+    border: 1px solid #999;
+    border-radius: 3px;
+    height: 100%;
+    line-height: 35px;
+    padding: 10px 10px 30px 10px;
+    text-align:left;
+    width: 340px;
+}
