--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,40 +2,39 @@
 <h2 class="page-header">Dashboard</h2>
 <p>Welcome to your dashboard</p>
 
-<div class="container-fluid" >
-    <div class="index-grid">
-        <div class="row">
-            <div class="col-md-8">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+
                 <div class="col-md-4">
                     <div class="left">
+
                         <div class="image1"><img src="/img/png/Maps.png" alt="maps"></div>
                         <div class="image2"><img src="/img/png/Favorite Places.png" alt="favorite_places"></div>
                     </div>
                 </div>
+
                 <div class="col-md-4">
-                   <div class="center">
-                       <div class="image4"><img src="/img/png/Messages.png" alt="messages"></div>
-                   </div>
+                    <div class="center">
+                        <div class="image4"><img src="/img/png/Messages.png" alt="messages"></div>
+                    </div>
                 </div>
-            </div>
 
-
-                <div class="right">
-                    <div class="col-md-4">
+                <div class="col-md-4">
+                    <div class="right">
                         <div class="row">
                             <div class="image3 "><img src="/img/png/Events.png" alt="events"></div>
-                        </div>
-
-                        <div class="row">
-                            <div class="image5 col-md-2"><img src="/img/png/Settings.png" alt="settings"></div>
-                            <div class="image6 col-md-2"><img src="/img/png/Logout.png" alt="logout"></div>
+                            <div>
+                                <span class="image5 col-md-6"><img src="/img/png/Settings.png" alt="settings"></span>
+                                <span class="image6 col-md-6"><img src="/img/png/Logout.png" alt="logout"></span>
+                            <div>
                         </div>
 
                     </div>
                 </div>
-
+            </div>
         </div>
     </div>
-</div>
+
 
 </body>
