--- a/views/maps.handlebars
+++ b/views/maps.handlebars
@@ -8,7 +8,7 @@
 
 <body>
 <h1 class="page-header">Maps</h1>
-<p>Welcome to your map</p>
+<p id="subtitle">Welcome to your map</p>
     <div class="container-fluid">
         <div class="row">
             <div class="options-box col-md-2">
@@ -52,6 +52,7 @@
                     <input type="text" id="search-within-time-text" placeholder="Ex: Google office or 75 9th St">
                     <input type="button" id="search-within-time" value="Go">
                 </div>
+            
             </div>
             <div  id="map"></div>
         </div>
