--- a/views/maps.handlebars
+++ b/views/maps.handlebars
@@ -13,6 +13,14 @@
         <div class="row">
             <div class="options-box col-md-2">
                 <h1>Your Map Options</h1>
+                <hr>
+                <div>
+                    <h4>Enter Your Current Location</h4>
+                    <input type="text" id="currentLocation" placeholder="Whats the address of your current location">
+                    <input type="button" id="submit-location" value="Submit">
+                    <input type="button" id="clear-location" value="Clear Location">
+                </div>
+                <hr>
                 <div class="mapButtons">
                     <input type="button" id="show-listings" value="ShowListings">
                     <input type="button" id="hide-listings" value="HideListings">
