--- a/views/partials/mapfunctions.handlebars
+++ b/views/partials/mapfunctions.handlebars
@@ -1,43 +1,45 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+<script>
+    window.jQuery || document.write('<script src="/js/vendor/jquery-1.12.0.min.js"><\/script>')
 
-
-<script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASBPr5sRT2E6DcIpLZmtNwFm0S4A0RCkk&libraries=places,drawing,geometry&callback=initMap"
-        async defer>
 </script>
+
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASBPr5sRT2E6DcIpLZmtNwFm0S4A0RCkk&libraries=places,drawing,geometry&callback=initMap"
+    async defer>
+
+    </script>
 
 <!-- google maps api-->
 <script type="text/javascript">
-    
     //global Varaibles
+
     var map;
     var favmarkers = [];
-    var markers =[];
+    var markers = [];
     var searchmarkers = [];
     var polygon = null;
     var infowindow;
     var service;
-    var louisville = {lat: 38.252259, lng: -85.756534};
-
- //this function initiates the map
+    var louisville = { lat: 38.252259, lng: -85.756534 };
+    var userLocation;
+    //this function initiates the map
     function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: 38.252259, lng: -85.756534},
+            center: { lat: 38.252259, lng: -85.756534 },
             zoom: 14
         });
         //use locations array as the users saved favorite places
         var locations = [
-            {title: 'KFC Yum Center', location: {lat: 38.257340, lng: -85.754245}},
-            {title: 'The Old Spaghetti Factory', location: {lat: 38.255317, lng: -85.754910}},
-            {title: 'Spinellis Pizza', location: {lat: 38.255317, lng: -85.754910}},
-            {title: 'Hard Rock Cafe', location: {lat: 38.252169, lng: -85.757583}},
-            {title: 'Smashburger', location: {lat: 38.255317, lng: -85.754910}}
+            { title: 'KFC Yum Center', location: { lat: 38.257340, lng: -85.754245 } },
+            { title: 'The Old Spaghetti Factory', location: { lat: 38.255317, lng: -85.754910 } },
+            { title: 'Hard Rock Cafe', location: { lat: 38.252169, lng: -85.757583 } },
+          
         ];
 
-//making info window for marker
-       infowindow = new google.maps.InfoWindow();
+        //making info window for marker
+        infowindow = new google.maps.InfoWindow();
         service = new google.maps.places.PlacesService(map);
 
         //init Drawing Manager
@@ -52,7 +54,7 @@
             }
         });
 
-//the following group uses the location array to create an array of markers on the init
+        //the following group uses the location array to create an array of markers on the init
 
         for (var i = 0; i < locations.length; i++) {
             //Get the position from the location array
@@ -99,6 +101,14 @@
             hideSearchMarker();
         });
 
+        document.getElementById('submit-location').addEventListener('click', function () {
+            setUserLocation();
+        });
+
+
+
+
+
         //Polygon Event Listener
         drawingManger.addListener('overlaycomplete', function (event) {
 
@@ -118,7 +128,12 @@
             polygon.getPath().addListener('insert_at', searchWithinPolygon);
         });
 
-//this function populates the info window when marker is clicked based on position of marker
+        function setUserLocation() {
+            userLocation = document.getElementById('currentLocation').value
+            console.log(userLocation);
+        }
+
+        //this function populates the info window when marker is clicked based on position of marker
         function populateInfoWindow(marker, infowindow) {
             //check to make sure infowindow is not  already opened
             if (infowindow.marker != marker) {
@@ -139,7 +154,12 @@
                         var nearStreetViewLocation = data.location.latLng;
                         var heading = google.maps.geometry.spherical.computeHeading(
                             nearStreetViewLocation, marker.position);
-                        infowindow.setContent('<div>' + marker.title + '</div><div id="pano"></div>');
+                        infowindow.setContent('<div>' + marker.title + '</div><div id="pano"></div>' +
+                            '<div><input type=\"button\" value=\"Save Location\" onclick = \"saveLocation()\" </input></div>' +
+                            '<div><input type=\"button\" value=\"View Route\" id = \"view-route\" </input></div>');
+                        document.getElementById('view-route').addEventListener('click', function () {
+                            markerDisplayDirections();
+                        });
                         var panoramaOptions = {
                             position: nearStreetViewLocation,
                             pov: {
@@ -157,8 +177,39 @@
                 /*  USe StreetVIew service to get the closest streetvie image within 50 meters of markers position  */
                 streetViewService.getPanoramaByLocation(marker.position, radius, getStreetView);
                 infowindow.open(map, marker);
+                function markerDisplayDirections(origin) {
+                    hideListings();
+                    var directionsService = new google.maps.DirectionsService;
+                    /* get the destination address from the user entered value. */
+                    var destinationAddress =
+                        marker.position;
+                    //Get mode again from the user entered Value.
+                    var mode = "DRIVING"
+                    directionsService.route({
+                        //The origin is the passed in markers position.
+                        origin: origin,
+                        //The destination is user entered address
+                        destination: destinationAddress,
+                        travelMode: google.maps.TravelMode[mode]
+                    }, function (response, status) {
+                        if (status === google.maps.DirectionsSstatus.OK) {
+                            var directionsDisplay = new google.maps.DirectionsRenderer({
+                                map: map,
+                                directions: response,
+                                draggable: true,
+                                polylineOptions: {
+                                    strokeColor: 'green'
+                                }
+                            });
+                        } else {
+                            window.alert('Directions request failed due to ' + status);
+                        }
+                    });
+                }
 
             }
+
+
         }
 
         function showListings() {
@@ -198,9 +249,9 @@
         function searchWithinPolygon() {
             for (var i = 0; i < markers.length; i++) {
                 if (google.maps.geometry.poly.containsLocation(markers[i].position, polygon)) {
-                    markers[i].setMap(map);
+                    favmarkers[i].setMap(map);
                 } else {
-                    markers[i].setMap(null);
+                    favmarkers[i].setMap(null);
                 }
             }
         }
@@ -218,7 +269,7 @@
                 geocoder.geocode(
                     {
                         address: address,
-                        componentRestrictions: {locality: 'Louisville'}
+                        componentRestrictions: { locality: 'Louisville' }
                     },
                     function (results, status) {
                         if (status == google.maps.GeocoderStatus.OK) {
@@ -250,18 +301,18 @@
                 hideOnly();
                 /*Use distance matrix service to calculate duration of routes between all markers  and the destination
                 * address entered by the user. Then put all the origins into an origin matrix*/
-                var destinations = [];
+                var origins = [];
                 for (var i = 0; i < searchmarkers.length; i++) {
                     //console.log(searchmarkers[i].position);
-                    destinations[i] = searchmarkers[i].position;
+                    origins[i] = searchmarkers[i].position;
                     //console.log(destinations[i]);
                 }
-                var origin = address;
+                var destination = address;
                 var mode = document.getElementById('mode').value;
                 //Now that both origins and destination are defined, get all info for the distance between
                 distanceMatrixService.getDistanceMatrix({
-                    origins: [origin],
-                    destinations: [destinations],
+                    origins: origins,
+                    destinations: [destination],
                     travelMode: google.maps.TravelMode[mode],
                     unitSystem: google.maps.UnitSystem.IMPERIAL,
 
@@ -282,7 +333,7 @@
             /* Parse through the results, and get the distance and duration of each because there might be multiple
              * origins and destinations we have a nested loop then make sure at least 1 result was found */
             var atLeastOne = false;
-            for (var i = 0; i < destinations.length; i++) {
+            for (var i = 0; i < origins.length; i++) {
                 var results = response.rows[i].elements;
                 for (var j = 0; j < results.length; j++) {
                     var element = results[i];
@@ -300,15 +351,15 @@
                             searchmarkers[i].setMap(map);
                             atLeastOne = true;
                             /* Create a mini info window to open immediately nd contain the distance and duration */
-                            var largeInfowindow = new google.maps.InfoWindow({
+                            var smallInfowindow = new google.maps.InfoWindow({
                                 content: durationText + ' away, ' + distanceText +
                                 '<div><input type=\"button\" value=\"View Route\" onclick =' +
                                 '\"displayDirections(&quot;' + destinations[i] + '&quot;);\"></input></div>'
                             });
-                            infowindow.open(map, searchmarkers[i]);
+                            smallInfowindow.open(map, searchmarkers[i]);
                             /* put this in so that this small window closes if the user clicks the marker,
                              * when the big infowindow opens */
-                            searchmarkers[i].infowindow = infowindow;
+                            searchmarkers[i].smallInfowindow = infowindow;
                             google.maps.event.addListener(searchmarkers[i], 'click', function () {
                                 this.infowindow.close();
                             });
@@ -347,7 +398,11 @@
                     }
                 });
             }
+
+
+
         }
+
 
 
         /*this function takes users input for type  of place and displays all within 5000 radius. If the user
@@ -355,24 +410,24 @@
           * conducted within the maps init location*/
         function placeSearch() {
             var placeQuery = document.getElementById('place-search-text').value;
-           infowindow = new google.maps.InfoWindow();
+            infowindow = new google.maps.InfoWindow();
             service = new google.maps.places.PlacesService(map);
-                if (zoomplace != null){
-                    service.nearbySearch({
-                        location: zoomplace,
-                        radius: 1000,
-                        type: placeQuery
+            if (zoomplace != null) {
+                service.nearbySearch({
+                    location: zoomplace,
+                    radius: 1000,
+                    type: placeQuery
 
-                    }, callback);
-                } else {
-                    service.nearbySearch({
-                        location: map.center,
-                        radius: 1000,
-                        type: placeQuery
+                }, callback);
+            } else {
+                service.nearbySearch({
+                    location: map.center,
+                    radius: 1000,
+                    type: placeQuery
 
-                    }, callback);
+                }, callback);
 
-                }
+            }
         }
         // THis Function parses results from placeSearch() and calls the createMarker() function for each.
         function callback(results, status) {
@@ -392,9 +447,9 @@
                 position: place.geometry.location,
                 title: place.name
             });
-            
-            google.maps.event.addListener(searchMarker, 'click', function() {
-               populateInfoWindow(this, infowindow);
+            console.log(searchMarker.position);
+            google.maps.event.addListener(searchMarker, 'click', function () {
+                populateInfoWindow(this, infowindow);
             });
             searchmarkers.push(searchMarker);
         }
@@ -410,4 +465,3 @@
     }
 
 </script>
-
